--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             <div class="navbar-nav mx-auto py-0">
                 <div class="nav-item dropdown">
 				<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-1/DenetimVeGuvence.html">Denetim ve Güvence</a>
-                    <div class="dropdown-menu m-0">
-                        <a href="tab-1/bagimsiz-denetim-hizmetleri.html" class="dropdown-item">Bağımsız Denetim Hizmetleri</a>
-                        <a href="tab-1/ic-denetim.html" class="dropdown-item">İç Denetim</a>
-                        <a href="tab-1/hile-suistimal-denetimi.html" class="dropdown-item">Hile (Suistimal) Denetimi</a>
-                        <a href="tab-1/finansal-due-diligence.html" class="dropdown-item">Finansal "Due Diligence"</a>
-                        <a href="tab-1/ciro-denetimi.html" class="dropdown-item">Ciro Denetimi</a>
-						<a href="tab-1/finansal-check-up.html" class="dropdown-item">Finansal Check-Up</a>
-                    </div>
+                    <ul class="dropdown-menu m-0">
+                        <li><a href="tab-1/bagimsiz-denetim-hizmetleri.html" class="dropdown-item">Bağımsız Denetim Hizmetleri</a></li>
+                        <li><a href="tab-1/ic-denetim.html" class="dropdown-item">İç Denetim</a></li>
+                        <li><a href="tab-1/hile-suistimal-denetimi.html" class="dropdown-item">Hile (Suistimal) Denetimi</a></li>
+                        <li><a href="tab-1/finansal-due-diligence.html" class="dropdown-item">Finansal "Due Diligence"</a></li>
+                        <li><a href="tab-1/ciro-denetimi.html" class="dropdown-item">Ciro Denetimi</a></li>
+						<li><a href="tab-1/finansal-check-up.html" class="dropdown-item">Finansal Check-Up</a></li>
+                    </ul>
                 </div>
 				<div class="nav-item dropdown">
 					<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-2/VergiDanismanligi.html">Vergi Danışmanlığı</a>
