--- a/tab-5/iletisim.html
+++ b/tab-5/iletisim.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- Navbar Start -->
-      <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="../index.html" class="navbar-brand ms-lg-5">
 			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/sirketlogoakc_transparent.png" alt="">
         </a>
@@ -42,97 +42,55 @@
         </button>
 <div class="collapse navbar-collapse" id="navbarCollapse">
   <div class="navbar-nav mx-auto py-0">
-    <div class="nav-item dropdown">
-	<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-1/DenetimVeGuvence.html">Denetim ve Güvence</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#submenuCollapse" aria-controls="submenuCollapse" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
+  			<div class="dropdown">
+										<div class="d-flex justify-content-between">
+      <a href="../index.html" class="nav-link" >ANASAYFA</a>
 </div>
-      <div class="dropdown-menu m-0" id="submenuCollapse">
-        <a href="../tab-1/bagimsiz-denetim-hizmetleri.html" class="dropdown-item">Bağımsız Denetim Hizmetleri</a>
-        <a href="../tab-1/ic-denetim.html" class="dropdown-item">İç Denetim</a>
-        <a href="../tab-1/hile-suistimal-denetimi.html" class="dropdown-item">Hile (Suistimal) Denetimi</a>
-        <a href="../tab-1/finansal-due-diligence.html" class="dropdown-item">Finansal "Due Diligence"</a>
-        <a href="../tab-1/ciro-denetimi.html" class="dropdown-item">Ciro Denetimi</a>
-        <a href="../tab-1/finansal-check-up.html" class="dropdown-item">Finansal Check-Up</a>
-      </div>
-    </div>
-				<div class="nav-item dropdown">
-					<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-2/VergiDanismanligi.html">Vergi Danışmanlığı</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#submenuCollapse1" aria-controls="submenuCollapse1" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
 </div>
-                    <div class="dropdown-menu m-0" id="submenuCollapse1">
-                        <a href="../tab-2/TamTasdikDenetimi.html" class="dropdown-item">Tam Tasdik Denetimi</a>
-                        <a href="../tab-2/kdv-iade-hizmeti.html" class="dropdown-item">KDV İade Hizmeti</a>
-                        <a href="../tab-2/teknopark-ve-ar-ge-merkezi-vergi-danismanligi.html" class="dropdown-item">Teknopark ve Ar-Ge Merkezi Vergi Danışmanlığı</a>
-                        <a href="../tab-2/vergi-yonetimi-danismanligi.html" class="dropdown-item">Vergi Yönetimi Danışmanlığı</a>
-                        <a href="../tab-2/vergi-revizyonu-hizmetleri.html" class="dropdown-item">Vergi Revizyonu Hizmetleri</a>
-						<a href="../tab-2/sirket-birlesmeleri-bolunmeleri-yapilandirmalari.html" class="dropdown-item">Şirket Birleşmeleri, Bölünmeleri & Yapılandırmaları</a>
-						<a href="../tab-2/vergi-davalari-ve-uyusmazlik-cozumleri.html" class="dropdown-item">Vergi Davaları ve Uyuşmazlık Çözümleri</a>
-                    </div>
-                </div>
-				<div class="nav-item dropdown">
+  				<div class="dropdown">
+										<div class="d-flex justify-content-between">
+      <a href="../tab-1/hakkimizda.html" class="nav-link" >Hakkımızda</a>
+</div>
+</div>
+  		<div class="nav-item dropdown">
 							<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-3/KurumsalFinansman.html">Kurumsal Finansman</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#submenuCollapse2" aria-controls="submenuCollapse2" aria-expanded="false" aria-label="Toggle submenu">
+      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Hizmetlerimiz</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="submenuCollapse2" aria-expanded="false" aria-label="Toggle submenu">
   <span class="navbar-toggler-icon"></span>
 </button>
 </div>
 				
                     <div class="dropdown-menu m-0"  id="submenuCollapse2">
-                        <a href="../tab-3/sirket-birlesmeleri.html" class="dropdown-item">Şirket Birleşmeleri</a>
-                        <a href="../tab-3/interim-cfo.html" class="dropdown-item">Interim CFO</a>
-                        <a href="../tab-3/degerleme.html" class="dropdown-item">Değerleme</a>
-                        <a href="../tab-3/halka-arz.html" class="dropdown-item">Halka Arz</a>
+                        <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
+                        <a href="../tab-2/vergi-danismanligi.html" class="dropdown-item">Vergi Danışmanlığı</a>
+                        <a href="../tab-2/finansal-danismanlik.html" class="dropdown-item">Finansal Danışmanlık</a>
                     </div>
                 </div>
-				<div class="nav-item dropdown">
-									<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-4/YonetimDanismanligi.html">Yönetim Danışmanlığı</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#submenuCollapse3" aria-controls="submenuCollapse3" aria-expanded="false" aria-label="Toggle submenu">
+						<div class="nav-item dropdown">
+							<div class="d-flex justify-content-between">
+      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" aria-controls="submenuCollapse2" aria-expanded="false" aria-label="Toggle submenu">
   <span class="navbar-toggler-icon"></span>
 </button>
 </div>
-                    <div class="dropdown-menu m-0"  id="submenuCollapse3">
-                        <a href="../tab-4/tesvik-danismanligi.html" class="dropdown-item">Teşvik Danışmanlığı</a>
-                        <a href="../tab-4/startup-danismanligi.html" class="dropdown-item">Start-Up Danışmanlığı</a>
-                        <a href="../tab-4/YonetimDanismanligi.html" class="dropdown-item">Yönetim Danışmanlığı</a>
-                        <a href="../tab-4/e-ticaret-danismanligi.html" class="dropdown-item">E-Ticaret Danışmanlığı</a>
-						<a href="../tab-4/satis-pazarlama-danismanligi.html" class="dropdown-item">Satış & Pazarlama Danışmanlığı</a>
-						<a href="../tab-4/uluslararasi-danismanlik.html" class="dropdown-item">Uluslararası Danışmanlık</a>
+				
+                    <div class="dropdown-menu m-0"  id="submenuCollapse2">
+                        <a href="../tab-3/bagimsiz-denetim-duyurulari.html" class="dropdown-item">Bağımsız Denetim Duyuruları</a>
+                        <a href="../tab-3/vergi-sirkuleri.html" class="dropdown-item">Vergi Sirkülerleri</a>
+                        <a href="../tab-3/seffaflik-raporu.html" class="dropdown-item">Şeffaflık Raporu</a>
                     </div>
                 </div>
-				<div class="nav-item dropdown">
-								<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-5/kurumsal-hizmetler.html">Kurumsal Hizmetler</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#submenuCollapse4" aria-controls="submenuCollapse4" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
-</div>
-                    <div class="dropdown-menu m-0"  id="submenuCollapse4">
-                        <a href="../tab-5/muhasebe-hizmetleri.html" class="dropdown-item">Muhasebe Hizmetleri</a>
-                        <a href="../tab-5/insan-kaynaklari-hizmetleri.html" class="dropdown-item">İnsan Kaynakları Hizmetleri</a>
-                        <a href="../tab-5/finans-hizmetleri.html" class="dropdown-item">Finans Hizmetleri</a>
-						<a href="../tab-5/kurumsallasma.html" class="dropdown-item">Kurumsallaşma</a>
-                    </div>
-                </div>
-				<div class="dropdown">
+				  				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-6/Hakkimizda.html">Hakkımızda</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#submenuCollapse5" aria-controls="submenuCollapse5" aria-expanded="false" aria-label="Toggle submenu">
-  <span class="navbar-toggler-icon"></span>
-</button>
+      <a href="../tab-4/kariyer-firsatlari.html" class="nav-link" >Kariyer Fırsatları</a>
 </div>
-					<div class="dropdown-menu m-0"  id="submenuCollapse5">
-					<a href="../tab-6/marka-hikayesi.html" class="dropdown-item">Marka Hikayesi</a>
-					<a href="../tab-6/ekibimiz.html" class="dropdown-item">Ekibimiz</a>
-					<a href="../tab-6/iletisim.html" class="dropdown-item">İletişim</a>
-					</div>
 </div>
+  				<div class="dropdown">
+										<div class="d-flex justify-content-between">
+      <a href="../tab-5/iletisim.html" class="nav-link" >İletişim</a>
+</div>
+</div>
+
             </div>
         </div>
     </nav>
@@ -225,25 +183,15 @@
     <div class="container-fluid bg-dark text-light mt-5 py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container pt-5">
             <div class="row g-5">
-                <!-- <div class="col-lg-3 col-md-6"> -->
-                    <!-- <h3 class="text-white mb-4">Quick Links</h3> -->
-                    <!-- <div class="d-flex flex-column justify-content-start"> -->
-                        <!-- <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a> -->
-                        <!-- <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a> -->
-                        <!-- <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a> -->
-                        <!-- <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog</a> -->
-                        <!-- <a class="text-light" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a> -->
-                    <!-- </div> -->
-                <!-- </div> -->
                 <div class="col-lg-6 col-md-6">
                     <h3 class="text-white mb-4">Menü</h3>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Denetim Ve Güvence</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Vergi Danışmanlığı</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Kurumsal Finansman</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Yönetim Danışmanlığı</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Kurumsal Hizmetler</a>
-						<a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hakkımızda</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Anasayfa</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hakkımızda</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hizmetlerimiz</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Duyurular</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Kariyer Fırsatları</a>
+						<a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>İletişim</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -253,15 +201,6 @@
                     <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@akcdenetim.com</p>
                     <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>212 447 64 60</p>
                 </div>
-                <!-- <div class="col-lg-3 col-md-6"> -->
-                    <!-- <h3 class="text-white mb-4">Follow Us</h3> -->
-                    <!-- <div class="d-flex"> -->
-                        <!-- <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a> -->
-                        <!-- <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a> -->
-                        <!-- <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a> -->
-                        <!-- <a class="btn btn-lg btn-primary btn-lg-square rounded" href="#"><i class="fab fa-instagram fw-normal"></i></a> -->
-                    <!-- </div> -->
-                <!-- </div> -->
                 <div class="col-12">
                     <form class="mx-auto" style="max-width: 600px;">
                         <div class="input-group">
