--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                     <img class="w-100" src="img/anasayfa.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <!-- <h5 class="text-white text-uppercase animated bounceInDown">AKC Denetim</h5> -->
-                            <!-- <h1 class="display-1 text-white mb-md-4 animated zoomIn">AKC DENETİM Her Adımda Yanınızda!</h1> -->
+                             <h5 class="text-white text-uppercase animated bounceInDown">AKC Denetim</h5>
+                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Geleceğe Güvenle…</h1> 
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a> -->
                             <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
@@ -116,8 +116,8 @@
                     <img class="w-100" src="img/anasayfa1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <!-- <h5 class="text-white text-uppercase animated bounceInDown">AKC Denetim</h5> -->
-                            <!-- <h1 class="display-1 text-white mb-md-4 animated zoomIn">Safe & Secure Home For Your Family</h1> -->
+                             <h5 class="text-white text-uppercase animated bounceInDown">AKC Denetim</h5>
+                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Kalite Odaklı…</h1> 
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a> -->
                             <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
@@ -127,8 +127,8 @@
                     <img class="w-100" src="img/calculator.png" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <!-- <h5 class="text-white text-uppercase animated bounceInDown">AKC Denetim</h5> -->
-                            <!-- <h1 class="display-1 text-white mb-md-4 animated zoomIn">Safe & Secure Home For Your Family</h1> -->
+                            <h5 class="text-white text-uppercase animated bounceInDown">AKC Denetim</h5>
+                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Şeffaf ve Güvenilir.</h1>
                             <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a> -->
                             <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
